<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/rotateCameraButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/rotate_camera"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/flip_camera" />

            <ImageButton
                android:id="@+id/toggleCameraFlashButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/toggle_camera_flash"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/flash_on" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/captureImageButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="64dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/capture_button"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/circle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>