<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />

    <LinearLayout
        android:id="@+id/FieldsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop">

        <RelativeLayout
            android:id="@+id/NameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/nameEditText"
                android:layout_alignEnd="@id/nameEditText"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_bold"
                android:labelFor="@id/nameEditText"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTextView"
                android:layout_centerInParent="true"
                android:autofillHints=""
                android:background="@drawable/edit_text_with_background"
                android:ems="10"
                android:fontFamily="@font/nunito"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/emailAddressEditText"
                android:layout_alignEnd="@id/emailAddressEditText"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_bold"
                android:labelFor="@id/emailAddressEditText"
                android:text="@string/e_mail"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailAddressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTextView"
                android:layout_centerInParent="true"
                android:autofillHints=""
                android:background="@drawable/edit_text_with_background"
                android:ems="10"
                android:fontFamily="@font/nunito"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/passwordEditText"
                android:layout_alignEnd="@+id/passwordEditText"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_bold"
                android:labelFor="@id/passwordEditText"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTextView"
                android:layout_centerInParent="true"
                android:autofillHints=""
                android:background="@drawable/edit_text_with_background"
                android:ems="10"
                android:fontFamily="@font/nunito"
                android:inputType="textPassword" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ConfirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmPasswordTextView"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/confirmPasswordEditText"
                android:layout_alignEnd="@id/confirmPasswordEditText"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_bold"
                android:labelFor="@id/confirmPasswordEditText"
                android:text="@string/confirm_password"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmPasswordTextView"
                android:layout_centerInParent="true"
                android:autofillHints=""
                android:background="@drawable/edit_text_with_background"
                android:ems="10"
                android:fontFamily="@font/nunito"
                android:inputType="textPassword" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FieldsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>